<resources>
    <string name="app_name">Tanavota</string>

    <string name="action_favorite">お気に入り</string>
    <string name="action_settings">設定</string>
    <string name="open">オープン</string>
    <string name="close">クローズ</string>

    <string name="nav_home">ホーム</string>
    <string name="nav_favorite">お気に入り</string>
    <string name="nav_history">閲覧履歴</string>
    <string name="nav_license">ライセンス</string>
    <string name="nav_article_detail">物件詳細</string>

    <string name="network_error_title">ネットワークエラー</string>
    <string name="network_error_description">時間を空けて再度アクセスしてください</string>
    <string name="retry">リトライ</string>

    <string name="complete_to_add_favorite">お気に入りに追加しました</string>
    <string name="complete_to_remove_favorite">お気に入りから削除しました</string>
    <string name="max_favorite_number_error">お気に入り件数が最大件数に達しています</string>
    <string name="failed_to_add_favorite">お気に入り追加に失敗しました</string>
    <string name="failed_to_remove_favorite">お気に入り削除に失敗しました</string>

    <string name="name">物件名</string>
    <string name="traffic">交通</string>
    <string name="location">所在地</string>
    <string name="article_item">物件種目</string>
    <string name="price">価格</string>
    <string name="administrative_expense">管理費等</string>
    <string name="repair_financial_reserve">修繕積立金</string>
    <string name="tenancy">借地期間・地代(月額)</string>
    <string name="premium">権利金</string>
    <string name="deposit">敷金または保証金</string>
    <string name="maintenance_cost">維持費等</string>
    <string name="lump_sum">その他一時金</string>
    <string name="annual_planned_income">年間予定収入</string>
    <string name="yield">利回り</string>
    <string name="layout">間取り</string>
    <string name="storey">階建 </string>
    <string name="building_area">建物面積</string>
    <string name="land_area">土地面積</string>
    <string name="building_structure">建物構造</string>
    <string name="time_old">築年月</string>
    <string name="land_right">土地権利</string>
    <string name="city_planning">都市計画</string>
    <string name="restricted_zone">用途地域</string>
    <string name="coverage_ratio">建ぺい率</string>
    <string name="floor_area_ratio">容積率</string>
    <string name="parking_lot">駐車場</string>
    <string name="motorcycle_place">バイク置き場</string>
    <string name="bicycle_parking_lot">駐輪場</string>
    <string name="private_road_burden_area">私道負担面積</string>
    <string name="contact_with_road">接道状況</string>
    <string name="classification_of_land_and_category">地目</string>
    <string name="geographical_features">地勢</string>
    <string name="the_total_number_of_houses">総戸数</string>
    <string name="country_law_report">国土法届出</string>
    <string name="reform_and_renovation_important_notice">リフォーム / リノベーション</string>
    <string name="special_report">特記事項</string>
    <string name="facilities">設備</string>
    <string name="remarks">備考</string>
    <string name="conditions">条件等</string>
    <string name="present_condition">現況</string>
    <string name="delivery">引渡し</string>
    <string name="article_number">物件番号</string>
    <string name="information_pub_date">情報公開日</string>
    <string name="next_time_update_due_date">次回更新予定日</string>
    <string name="business_form">取引形態</string>
    <string name="occupied_area">専有面積</string>
    <string name="balcony">バルコニー</string>
    <string name="pet">ペット</string>
    <string name="site_area">敷地面積</string>
    <string name="management_form">管理形態・方式</string>
    <string name="cost_per_square_meter">平米単価</string>
    <string name="deleted">掲載終了フラグ</string>
    <string name="setback">セットバック</string>
    <string name="management_company">管理会社</string>
    <string name="management_employees">管理員</string>
    <string name="main_opening">主開口部</string>
    <string name="other_area">その他面積</string>

    <string name="transfer_button_text">掲載サイトで問い合わせる</string>

</resources>
