<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_main_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/menu_favorite"
            android:icon="@drawable/ic_favorite_border_black_48dp"
            android:title="@string/nav_favorite" />
        <item
            android:id="@+id/menu_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_history" />
    </group>
    <group
        android:id="@+id/nav_sub_menu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_license"
            android:title="@string/nav_license" />
    </group>
</menu>