<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <import type="com.tanavota.tanavota.viewmodel.common.DataLoadingState" />

        <variable
            name="state"
            type="com.tanavota.tanavota.viewmodel.common.DataLoadingState" />

        <variable
            name="delegate"
            type="com.tanavota.tanavota.viewmodel.common.DataLoadingState.Delegate" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/ltgray"
            android:visibility="@{state == DataLoadingState.Loading? View.VISIBLE : View.GONE}">

            <ProgressBar
                android:layout_width="wrap_content"
                style="?android:attr/progressBarStyleLarge"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/ltgray"
            android:visibility="@{state == DataLoadingState.Error? View.VISIBLE : View.GONE }">

            <TextView
                android:id="@+id/network_error_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/network_error_title"
                />

            <TextView
                android:id="@+id/network_error_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/network_error_title"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/network_error_description"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/network_error_description"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/retry"
                android:onClick="@{()->delegate.onRetry()}"/>

        </RelativeLayout>

    </FrameLayout>

</layout>