<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <import type="com.tanavota.tanavota.viewmodel.common.DataLoadingState" />

        <variable
            name="viewModel"
            type="com.tanavota.tanavota.viewmodel.common.ArticleThumbnailModelable" />

    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:visibility="@{viewModel.loadingState == DataLoadingState.Completed? View.GONE : View.VISIBLE}">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@color/ltgray"
            android:visibility="@{viewModel.loadingState == DataLoadingState.Loading? View.VISIBLE : View.GONE}">

            <ProgressBar
                android:layout_width="wrap_content"
                style="?android:attr/progressBarStyleLarge"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ltgray"
            android:visibility="@{viewModel.loadingState == DataLoadingState.Error? View.VISIBLE : View.GONE }">

            <TextView
                android:id="@+id/network_error_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/network_error_title" />

            <TextView
                android:id="@+id/network_error_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/network_error_title"
                android:layout_marginTop="10dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/network_error_description" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/network_error_description"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/retry"
                android:onClick="@{()->viewModel.onRetry()}" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</layout>